2001-01-10 Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSAttributedString.m ([GSAttributedString -length]),
	([GSMutableAttributedString -length]): Added for speed.

2001-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Fix bug in checking possible default string
	encodings . reported by Stefan Urbanek

2001-01-10  Richard Frith-Macdonald <rfm@gnu.org>

	Tidyup by removing 'NonCore' categories.

2001-01-09  Richard Frith-Macdonald <rfm@gnu.org>

	General tidyups to simplify code and to make class names
	consistent with the other libraries.
	* Headers/Foundation/NSGAttributedString.h: removed
	* Source/NSGAttributedString.m: renamed to GSAttributedString.m
	concrete classes renamed for consistency with other gstep libs.
	* Source/NSGDictionary.m: renamed to GSDictionary.m
	concrete classes renamed for consistency with other gstep libs.
	* Source/NSAttributedString.m: classes renamed
	* Source/NSDictionary.m: classes renamed
	* Source/GNUmakefile: replace NSGAttrinbutedString with and
	NSGDictionary with GS prefixed classes.
	Don't try to install old header.
	* Source/NSString.m: updates for class renaming.
	* Source/NSSerializer.m: ditto

2001-01-08  Adam Fedor  <fedor@gnu.org>

	* configure.in: Enable ffcall by default (unless the libraries
	don't exist).

2001-01-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/Foundation/NSGArray.h: removed
	* Headers/Foundation/NSArray.h: merge core/non-core classes.
	* Source/GNUmakefile: replace NSGArray with GSArray.
	* Source/NSGArray.m: converted to GSArray.m
	* Source/NSArray.m: simplified by merging core/non-core classes.
	Use placeholder class when allocating constant arrays.
	* Source/GSArray.m: simplified version of GSArray.m
	Added GSPlaceholderArray.
	* Source/NSSerializer.m: use GSInlineArray where possible.
	* Source/GSSet.m: Provide decoding of NSGSet for backward compatibility.
	* Source/NSException.m: Avoid recursion in exception handler.
