@@ -1,3 +1,8 @@
+2001-01-12  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/GSXML.m: ([-GSXMLDocument setRoot:]) set root node to be
+	owned by libxml, so we don't free it's memory ourselves.
+
 2001-01-10 Nicola Pero  <n.pero@mi.flashnet.it>
 
 	* Source/GSAttributedString.m ([GSAttributedString -length]),
